--- a/SocialConnect/appsettings.json
+++ b/SocialConnect/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "conn": "Server=HABEEEEBA\\SQLEXPRESS;Database=SocialConnectDB;Trusted_connection=True;TrustServerCertificate=True;"
+    "con": "Server=DESKTOP-6H9B8GJ\\SQLEXPRESS;Database=SocialConnectDB;Trusted_connection=True;TrustServerCertificate=True;"
   }
 }
